--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 
 <body>
   <h1>Todo List</h1>
+
+  <div>
+    <input type="text" id="taskInput" placeholder="Enter a task">
+    <button id="addTask">Add</button>
+  </div>
+
+  <div id="taskList">
+    <!-- Tasks will be added here dynamically -->
+  </div>
   
   <script src="script.js"></script>
 </body>
